@@ -68,3 +68,4 @@ ylwrap
 Doxyfile
 cscope.out
 doxygen
+compile
