@@ -12,6 +12,8 @@ if USE_BOARD3D
 noinst_LTLIBRARIES = libboard3d.la
 endif
 
+EXTRA_DIST = wglBuffer.c wglBuffer.h
+
 libboard3d_la_SOURCES = drawboard3d.c font3d.c fun3d.h graph.c gtkcolour3d.c \
 			inc3d.h matrix.c matrix.h misc3d.c model.c model.h \
 			shadow.c types3d.h widget3d.c misc3d.h 
