@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: makebearoff.c,v 1.61 2008/01/16 16:16:45 Superfly_Jon Exp $
+ * $Id: makebearoff.c,v 1.62 2008/01/20 23:38:08 c_anthon Exp $
  */
 
 #include "config.h"
@@ -36,6 +36,7 @@
 #include "positionid.h"
 #include "bearoff.h"
 #include "util.h"
+#include "multithread.h"
 
 #if WIN32
 #include <windows.h>
@@ -1446,9 +1447,9 @@ generate_ts ( const int nTSP, const int nTSC,
 static void
 version ( void ) {
 #ifndef WIN32
-  printf ( "makebearoff $Revision: 1.61 $\n" );
+  printf ( "makebearoff $Revision: 1.62 $\n" );
 #else
-  MessageBox( NULL, "makebearoff $Revision: 1.61 $\n", "Makebearoff", MB_OK );
+  MessageBox( NULL, "makebearoff $Revision: 1.62 $\n", "Makebearoff", MB_OK );
 #endif
 }
 
@@ -1580,7 +1581,7 @@ extern int main( int argc, char **argv )
     dlgprintf( 123, "%d", nHashSize);
     dlgprintf( 124, "%s", szOldBearoff ? "yes" : "no");
     dlgprintf(130, "Generating one-sided bearoff database. Please wait." );
-    dlgprintf(131, "makebearoff $Revision: 1.61 $" );
+    dlgprintf(131, "makebearoff $Revision: 1.62 $" );
 #else
     fprintf ( stderr, 
               _("One-sided database:\n"
@@ -1708,7 +1709,7 @@ extern int main( int argc, char **argv )
     dlgprintf(125, "" );
     dlgprintf(126, "" );
     dlgprintf(130, "Generating two-sided bearoff database. Please wait." );
-    dlgprintf(131, "makebearoff $Revision: 1.61 $" );
+    dlgprintf(131, "makebearoff $Revision: 1.62 $" );
 #else 
     fprintf ( stderr,
               _("Two-sided database:\n"
