@@ -20,14 +20,20 @@ board3d/model.c
 board3d/model.h
 board3d/shadow.c
 board3d/types3d.h
+board3d/wglBuffer.c
+board3d/wglBuffer.h
 board3d/widget3d.c
 boarddim.h
 boardpos.c
 boardpos.h
 common.h
+config.h
 copying.c
+corecount.c
 credits.c
 credits.h
+dbprovider.c
+dbprovider.h
 dice.c
 dice.h
 drawboard.c
@@ -103,6 +109,7 @@ import.h
 latex.c
 lib/cache.c
 lib/cache.h
+lib/gnubg-types.h
 lib/isaac.c
 lib/isaac.h
 lib/isaacs.h
